Add close/open election functionality
Allows election admins to close and open an election, as long as a start/end time is NOT set
